tests/baselines/reference/esDecorators-classDeclaration-missingEmitHelpers-classDecorator.3.errors.txt
main.ts(6,1): error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(6,1): error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
main.ts(6,1): error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== main.ts (3 errors) ====
    export {}
    
    declare var dec: any;
    
    // needs: __esDecorate, __runInitializers, __setFunctionName
    @dec class C {
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__esDecorate' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__runInitializers' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
    ~~~~
!!! error TS2343: This syntax requires an imported helper named '__setFunctionName' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
        static #foo() {}
    }
    
==== tslib.d.ts (0 errors) ====
    export {}
    